--- a/b.html
+++ b/b.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Help Us Fix Food Waste (It's Actually Insane)</title>
+    <title>Shape the Future of Zero‑Waste Dining</title>
     
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -42,94 +42,99 @@
             <!-- Hero Section -->
             <div class="text-center mb-12">
                 <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">
-                    This Food Waste Thing is Actually Unhinged 🤯
+                    Shape the Future of Zero‑Waste Dining
                 </h1>
                 
                 <p class="text-lg text-gray-700 mb-8">
-                    Spare us 10 mins and let's make dining sustainable AF—no cap.
+                    Lend us 10 minutes and help cut global food waste—one delicious meal at a time.
                 </p>
 
                 <!-- The primary call-to-action button -->
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSevaz2zPQFJptx3aMiMS95Jp6-5D7NF0OFw_Nvk9zyU5iyM7A/viewform?usp=header" id="take-survey-btn" class="inline-block bg-green-600 text-white font-bold text-lg px-8 py-4 rounded-full hover:bg-green-700 transition-transform transform hover:scale-105 shadow-lg">
-                    Let's Go ✨
+                    Take the Survey
                 </a>
             </div>
 
             <!-- Why Your Voice Matters Section -->
             <div class="mb-12">
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4">Why This Actually Matters</h2>
+                <h2 class="text-2xl font-semibold text-gray-800 mb-4">Why Your Voice Matters</h2>
                 <p class="text-gray-700 mb-6">
-                    1/3 of all food gets yeeted into trash. We're building a zero-waste pop-up to prove sustainable food can actually slap.
+                    Every year roughly one‑third of the food we produce never gets eaten, yet it carries an outsized share of the world's water use, land use, and climate‑warming emissions. We're creating a roaming, zero‑waste pop‑up dining experience to help restaurants slash their footprint and prove that sustainability can taste amazing.
                 </p>
                 <p class="text-gray-700 mb-4">
-                    Tell us:
+                    We're gathering diners from Australia, New Zealand, and the United States to tell us:
                 </p>
                 <ul class="text-gray-700 mb-6 space-y-2 list-disc list-inside">
-                    <li>What "zero-waste" means to you</li>
-                    <li>Would you pay extra for restaurants that waste nothing?</li>
-                    <li>What gets you hyped about turning scraps into gourmet meals</li>
+                    <li>How you define "food waste" and what "zero‑waste" means to you.</li>
+                    <li>Whether environmental impact influences your dining choices.</li>
+                    <li>How likely you are to try—or pay a premium for—restaurants that waste nothing.</li>
+                    <li>What excites you or worries you about the idea of turning food scraps into gourmet dishes.</li>
                 </ul>
                 <p class="text-gray-700">
-                    Your answers shape our menu.
+                    Your answers will directly inform the menus, experiences, and community programs we roll out.
                 </p>
             </div>
 
             <!-- What's in It for You Section -->
             <div class="mb-12">
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4">What's In It For You?</h2>
+                <h2 class="text-2xl font-semibold text-gray-800 mb-4">What's in It for You</h2>
                 <div class="space-y-4">
                     <div>
-                        <strong class="text-green-700">Make an Impact:</strong> 
-                        <span class="text-gray-700">Help prove sustainable food can be fire.</span>
+                        <strong class="text-green-700">Impact:</strong> 
+                        <span class="text-gray-700">Help restaurants slash their footprint and prove that sustainability can taste amazing.</span>
                     </div>
                     <div>
-                        <strong class="text-green-700">Get the Tea:</strong> 
-                        <span class="text-gray-700">See how your food habits stack up (we'll send the breakdown).</span>
+                        <strong class="text-green-700">Insight:</strong> 
+                        <span class="text-gray-700">See how your food habits compare with others in your region (we'll send a summary of key findings).</span>
                     </div>
                     <div>
-                        <strong class="text-green-700">Shape the Vibe:</strong> 
-                        <span class="text-gray-700">Help us build what people actually want.</span>
+                        <strong class="text-green-700">Influence:</strong> 
+                        <span class="text-gray-700">Shape the Slow Burn pop‑up so it meets real diners' expectations—maybe even yours.</span>
                     </div>
                 </div>
                 <p class="text-sm text-gray-600 mt-4">
-                    Anonymous. No sketchy stuff.
+                    We never share or sell individual responses. All results are anonymized and reported in aggregate only.
                 </p>
             </div>
 
             <!-- Ready to Start Section -->
             <div class="mb-12 text-center bg-gray-50 p-8 rounded-lg">
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4">Ready to Lock In?</h2>
+                <h2 class="text-2xl font-semibold text-gray-800 mb-4">Ready?</h2>
                 <p class="text-gray-700 mb-6">
-                    10 mins, no wrong answers, bounce anytime.
+                    Click "Take the Survey" to get started.<br>
+                    Expect ~10 minutes, no right or wrong answers, and you can exit anytime.
                 </p>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSevaz2zPQFJptx3aMiMS95Jp6-5D7NF0OFw_Nvk9zyU5iyM7A/viewform?usp=header" class="inline-block bg-green-600 text-white font-bold text-lg px-8 py-4 rounded-full hover:bg-green-700 transition-transform transform hover:scale-105 shadow-lg">
-                    Let's Go ✨
+                    Take the Survey ▸
                 </a>
             </div>
 
+
             <!-- Who Should Participate Section -->
             <div class="mb-12">
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4">Who Should Take This?</h2>
+                <h2 class="text-2xl font-semibold text-gray-800 mb-4">Who Should Participate?</h2>
                 <ul class="text-gray-700 space-y-2 list-disc list-inside">
-                    <li>Anyone who eats food (18+)</li>
-                    <li>Foodies, skeptics, everyone</li>
-                    <li>People who care about where food comes from</li>
+                    <li>Adventurous foodies, curious skeptics, and everyone in between</li>
+                    <li>Diners aged 18 +</li>
+                    <li>People who care—just a little or a lot—about where their food comes from</li>
                 </ul>
             </div>
 
+
+
             <!-- Stay Hungry for Change Section -->
             <div class="mb-12 bg-green-50 p-8 rounded-lg">
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4">Stay in the Loop</h2>
+                <h2 class="text-2xl font-semibold text-gray-800 mb-4">Stay Hungry for Change</h2>
                 <p class="text-gray-600 mb-6">
-                    Get the full report by <strong class="text-green-700">August 25th, 2025</strong>.
+                    Enter your email to receive the full report and our findings. We will complete the survey and publish the results by the <strong class="text-green-700">25th of August 2025</strong>.
                 </p>
 
                 <p class="text-gray-700 mb-6">
-                    No spam, just the good stuff.
+                    No spam—just smart, sustainable deliciousness.
                 </p>
                 <div class="text-center">
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSdmysIw9DtO33vHxV2D-2igeG3OkPchsGebBjXrWarrCuRaQw/viewform?usp=header" target="_blank" class="inline-block bg-gray-800 text-white font-bold px-6 py-3 rounded-lg hover:bg-gray-900 transition-transform transform hover:scale-105 shadow-md">
-                        Get the Report 📊
+                        Subscribe & Get the Report
                     </a>
                 </div>
             </div>
