--- a/a.html
+++ b/a.html
@@ -46,7 +46,7 @@
                 </h1>
                 
                 <p class="text-lg text-gray-700 mb-8">
-                    Spare us 10 mins and let's make dining sustainable AF—no cap.
+                    Spare us 10 mins and let's make dining sustainable.
                 </p>
 
                 <!-- The primary call-to-action button -->
@@ -59,7 +59,7 @@
             <div class="mb-12">
                 <h2 class="text-2xl font-semibold text-gray-800 mb-4">Why This Actually Matters</h2>
                 <p class="text-gray-700 mb-6">
-                    1/3 of all food gets yeeted into trash. We're building a zero-waste pop-up to prove sustainable food can actually slap.
+                    1/3 of all food gets yeeted into trash. We're building a zero-waste concept to prove sustainable food can actually slap.
                 </p>
                 <p class="text-gray-700 mb-4">
                     Tell us:
@@ -69,9 +69,7 @@
                     <li>Would you pay extra for restaurants that waste nothing?</li>
                     <li>What gets you hyped about turning scraps into gourmet meals</li>
                 </ul>
-                <p class="text-gray-700">
-                    Your answers shape our menu.
-                </p>
+                
             </div>
 
             <!-- What's in It for You Section -->
